--- a/CR_YPTO_TPF.csproj
+++ b/CR_YPTO_TPF.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>77fabb8a-69b4-4710-a23c-b204d59e9073</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,6 +27,7 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="ScottPlot" Version="4.1.59" />
     <PackageReference Include="ScottPlot.WinForms" Version="4.1.59" />
+    <PackageReference Include="System.Runtime.Caching" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
